Add and link attribute terms: Defines, Identifies, and Indicates. Resolves #516.

--- a/common/terms.html
+++ b/common/terms.html
@@ -57,6 +57,11 @@
     <dd>
       <p>A set of instance <a class="termref" href="#dfn-object">objects</a> that share similar characteristics.</p>
     </dd>
+    <dt><dfn>Defines</dfn></dt>
+    <dd>
+      <p>Used in an attribute description to denote that the value <a href="#typemapping">type</a> is of type decimal, integer, or string.</p>
+      <p>Related Terms: <a>Identifies</a>, <a>Indicates</a></p>
+    </dd>
     <dt><dfn data-lt="deprecated|deprecate|deprecation">Deprecated</dfn></dt>
     <dd>
       <p>A deprecated <a class="termref" href="#dfn-role">role</a>, <a class="termref" href="#dfn-state">state</a>, or <a class="termref" href="#dfn-property">property</a> is one which has been outdated by newer constructs or changed circumstances, and which may be removed in future versions of the <abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> specification. <a class="termref" data-lt="user agent">User agents</a> are encouraged to continue to support items identified as deprecated for backward compatibility. For more information, see <a href="#deprecated" class="specref">Deprecated Requirements</a> in the Conformance section.</p>
@@ -90,6 +95,16 @@
     <dt><dfn data-lt="informative|non-normative">Informative</dfn></dt>
     <dd>
       <p>Content provided for information purposes and not required for conformance. Content required for conformance is referred to as <a>normative</a>.</p>
+    </dd>
+    <dt><dfn>Identifies</dfn></dt>
+    <dd>
+      <p>Used in an attribute description to denote that the value <a href="#typemapping">type</a> is an IDREF (identifying a single element) or IDREFS (identifiying one or more elements).</p>
+      <p>Related Terms: <a>Defines</a>, <a>Indicates</a></p>
+    </dd>
+    <dt><dfn>Indicates</dfn></dt>
+    <dd>
+      <p>Used in an attribute description to denote that the value <a href="#typemapping">type</a> is a Boolean (true/false), an NMTOKEN (a single named token), or NMTOKENS (a list of one or more named tokens).</p>
+      <p>Related Terms: <a>Defines</a>, <a>Identifies</a></p>
     </dd>
     <dt><dfn>Keyboard Accessible</dfn></dt>
     <dd>
