--- a/common/terms.html
+++ b/common/terms.html
@@ -59,7 +59,7 @@
     </dd>
     <dt><dfn>Defines</dfn></dt>
     <dd>
-      <p>Used in an attribute description to denote that the value <a href="#typemapping">type</a> is of type decimal, integer, or string.</p>
+      <p>Used in an attribute description to denote that the value <a href="#typemapping">type</a> is decimal, integer, or string.</p>
       <p>Related Terms: <a>Identifies</a>, <a>Indicates</a></p>
     </dd>
     <dt><dfn data-lt="deprecated|deprecate|deprecation">Deprecated</dfn></dt>
